feat: webhook's ignored host replacement value can now be configured per webhook instead of falling back to hard-coded global value
- Existing webhooks have previous 'global' as default during migration
- Allow new property to be managed by web interface
- This allows (custom) grouping on the host attribute (if multiple webhook's ignore host replacement values are identical)
